--- a/Mushroom_classification_project.ipynb
+++ b/Mushroom_classification_project.ipynb
@@ -16,7 +16,7 @@
     }
    ],
    "source": [
-    "#importing required packages\n",
+    "#importing required package\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
